--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # AI Chatbot Environment Variables
 
+# Ollama Cloud API (for free AI model access)
+# Get your API key from: https://ollama.com/settings/api
+OLLAMA_API_KEY=your-ollama-api-key-here
+OLLAMA_BASE_URL=https://ollama.com
+
 # OpenRouter API (for AI model access)
 # Get your API key from: https://openrouter.ai/keys
 OPENROUTER_API_KEY=sk-or-v1-your-api-key-here
@@ -15,6 +20,15 @@ CHUTES_VIDEO_API_URL=https://chutes-wan-2-2-i2v-14b-fast.chutes.ai
 
 # OpenRouter Configuration
 OPENROUTER_APP_NAME=AI Content Generation Platform
+
+# AI Provider Configuration
+# Options: ollama, openrouter, chutes
+AI_DEFAULT_PROVIDER=ollama
+
+# Ollama Cloud Configuration
+OLLAMA_DEFAULT_MODEL=gpt-oss:20b
+OLLAMA_TIMEOUT=60000
+OLLAMA_RETRIES=3
 
 # Application URL
 # Set to your deployment URL in production
