--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "clsx": "^2.1.1",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^12.23.24",
-    "lucide-react": "^0.546.0",
+    "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "shiki": "^3.15.0",
     "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
