Enhance AI model integration by adding Hugging Face and LlamaCloud API support in environment configuration. Update package dependencies to include new libraries for improved functionality. Refactor code components to incorporate reasoning features in text and code generation, enhancing user experience with dynamic model selection and token usage tracking. Improve UI elements and streamline component interactions for better performance.

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,12 @@ CHUTES_API_BASE_URL=https://llm.chutes.ai/v1
 CHUTES_IMAGE_API_URL=https://image.chutes.ai
 CHUTES_VIDEO_API_URL=https://chutes-wan-2-2-i2v-14b-fast.chutes.ai
 
+# Hugging Face API (for embeddings and OCR models)
+# Get your API key from: https://huggingface.co/settings/tokens
+# Required for OCR and embedding functionality
+HUGGINGFACE_API_KEY=hf-your-huggingface-api-key-here
+HUGGINGFACE_BASE_URL=https://router.huggingface.co/hf-inference
+
 # OpenRouter Configuration
 OPENROUTER_APP_NAME=AI Content Generation Platform
 
@@ -36,3 +42,8 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Optional: Custom RAG API URL (if using self-hosted RAG)
 # RAG_API_BASE_URL=http://localhost:8000
+
+# LlamaCloud API (for cloud-based RAG)
+# Get your API key from: https://cloud.llamaindex.ai/
+LLAMACLOUD_API_KEY=your-llamacloud-api-key-here
+LLAMACLOUD_BASE_URL=https://api.cloud.llamaindex.ai/api/v1
