ocr text extraction updated : test

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ CHUTES_VIDEO_API_URL=https://chutes-wan-2-2-i2v-14b-fast.chutes.ai
 # Get your API key from: https://huggingface.co/settings/tokens
 # Required for OCR and embedding functionality
 HUGGINGFACE_API_KEY=hf-your-huggingface-api-key-here
-HUGGINGFACE_BASE_URL=https://router.huggingface.co/hf-inference
+HUGGINGFACE_BASE_URL=https://router.huggingface.co/v1
 
 # OpenRouter Configuration
 OPENROUTER_APP_NAME=AI Content Generation Platform
