--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "motion": "^12.23.24",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
