--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "motion": "^12.23.24",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^2.4.5",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
