--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
+    "threejs-components": "^0.0.26",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
