Refactor environment variables and update UI references from "Chatbot" to "Studio" for consistency. Adjust TubesCursor properties for enhanced interaction.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# AI Chatbot Environment Variables
+# Studio Environment Variables
 
 # Ollama Cloud API (for free AI model access)
 # Get your API key from: https://ollama.com/settings/api
